# agent-exchange

./: .env.example  .gitignore  LICENSE  README.md  labels.json  pyproject.toml  render.yaml
scripts/: paper_figs.py  paper_figs_full.py  paper_figs_n40.py  paper_figs_publication.py  repro_paper_A.py
server/: _selftest.py  app.py  cross_owner.py  demo_budget.py  live_guard.py  replay_recorder.py  requirements.txt  sim.py
spikes/: RUN.md  _tmp_test_audit.py  adaptive_adversary_run.py  adversarial_stance_run.py  aggregation_battery.py  analyze_composite_audit.py  audit_contested.py  audit_smoke.py  audit_third_vendor.py  band_room.py  bidding_smoke.py  build_long_corpus_n40.py  calibrate_run.py  catch_rate_run.py  check_balance.py  collaboration_smoke.py  contestable_stability_probe.py  crewai_smoke.py  cross_org_settlement_smoke.py  cross_owner_smoke.py  cross_source_fab_n_run.py  cross_source_run.py  cross_source_scaled_run.py  cross_source_slice_run.py  discovery_recruiting_smoke.py  endogenous_market_run.py  ensemble_run.py  gate_zero_demo.py  gifted_span_run.py  hiring_smoke.py  known_exploit_probe.py  langgraph_smoke.py  long_doc_gate_run.py  mitigation_probe.py  nda_job_run.py  open_weight_ensemble_run.py  pilot_preflight.py  population_mix_run.py  reputation_loop_smoke.py  scaled_adaptive_run.py  (+13 more)
tests/: test_anomaly_drift.py  test_anomaly_telemetry.py  test_api_audit.py  test_api_run_live_guard.py  test_audit_pipeline.py  test_bidding.py  test_budget_guard.py  test_catch_rate.py  test_contacts.py  test_crewai_specialist.py  test_cross_owner.py  test_graders.py  (+22 more)
(+237 files in other folders)
