[project]
name = "agent-exchange"
version = "0.1.0"
description = "An agent labor market on Band where agents discover, hire, and recruit each other (incl. cross-owner), do real work, and get paid in USDC via x402 — only when a calibrated work-verifier proves the work is real."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",        # x402 / Band / provider HTTP calls
    "tenacity>=8.2",      # retry predicates
    "python-dotenv>=1.0", # .env loading
]

[project.optional-dependencies]
# Added as the build progresses (keep core install light for fast spikes):
x402 = ["x402[fastapi]", "x402[httpx]", "x402[evm]", "uvicorn", "python-dotenv"]   # payment spike (NB: [evm] needed for web3 signers — the docs omit it)
frameworks = ["langgraph>=1.0", "langchain-openai>=1.0", "langchain-core>=1.0", "crewai>=1.14"]    # cross-framework worker brains (LangGraph agent on AI/ML API; CrewAI specialist on Featherless)
repro = ["numpy>=1.26"]                    # optional: numpy global RNG seeding
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_exchange"]
